# telemet_rust

./: .gitignore  Cargo.toml  README.md  reset.sh  start.sh
agent/: Cargo.toml
agent/src/: main.rs
dashboard/: package-lock.json
dashboard/src/: App.css  App.jsx
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
